Merge origin/yongheng into newyongheng
# Conflicts:
#	src/amc/model/entity/AppointmentDTO.java