@@ -16,17 +16,35 @@ public class DbWithId<T extends WithId> extends DbHandle<T> {
     public DbWithId(DbAdapter<T> rowAdapter, Path path, String idPrefix) {
         super(rowAdapter, path);
         this.idPrefix = idPrefix;
-        try (BufferedReader reader = Files.newBufferedReader(path)) {
-            String seq = reader.readLine();
-            sequence = Integer.parseInt(seq);
-        } catch (IOException e) {}
+
+        // Initialize sequence safely
+        if (Files.exists(path)) {
+            try (BufferedReader reader = Files.newBufferedReader(path)) {
+                String line;
+                while ((line = reader.readLine()) != null) {
+                    line = line.trim();
+                    // Skip non-numeric lines (headers)
+                    if (line.matches("\\d+")) {
+                        sequence = Integer.parseInt(line);
+                        break;
+                    }
+                }
+            } catch (IOException e) {
+                e.printStackTrace(); // log error
+            }
+        }
     }
 
     @Override
     public boolean insert(List<? extends T> modelLs) {
-        try (BufferedWriter writer = Files.newBufferedWriter(path, StandardOpenOption.WRITE)) {
-            writer.write(String.format("%03d", sequence));
-        } catch (IOException e) { return false; }
+        try (BufferedWriter writer = Files.newBufferedWriter(path, StandardOpenOption.WRITE, StandardOpenOption.TRUNCATE_EXISTING)) {
+            // Write current sequence at the top of the file
+            writer.write(String.format("%03d%n", sequence));
+        } catch (IOException e) {
+            e.printStackTrace();
+            return false;
+        }
+
         return super.insert(modelLs);
     }
 
@@ -36,6 +54,6 @@ public class DbWithId<T extends WithId> extends DbHandle<T> {
 
     public T getById(String id) {
         List<T> entityLs = this.select(1, DbMan.checkById(id));
-        return entityLs.size() == 1 ? entityLs.getFirst() : null;
+        return entityLs.size() == 1 ? entityLs.get(0) : null;
     }
 }
